change cmake_minimum_required to 3.14 + compile flags (-W...)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,9 @@
-cmake_minimum_required (VERSION 3.0)
+cmake_minimum_required (VERSION 3.14)
 
 # Options
 set (CMAKE_BUILD_TYPE Debug)
 set (CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set (CMAKE_C_COMPILER clang)
 
 # Project
 project (ft)
@@ -17,4 +18,5 @@ file (GLOB SRC
 add_library (${PROJECT_NAME} STATIC ${SRC})
 
 # Includes
+target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Werror -Wextra)
 target_include_directories (${PROJECT_NAME} PUBLIC ./includes)
