tolower and toupper tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,6 +6,8 @@ set (TESTER_NAME UnitTests)
 
 set (TEST_SRCS
 # ========================== ADD TEST SOURCES BELOW ========================== #
+  ft_to/test_ft_toupper.cc
+  ft_to/test_ft_tolower.cc
   ft_to/test_ft_itoa_base.cc
   ft_to/test_ft_itoa.cc
   ft_to/test_ft_atoi.cc
