--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,6 +6,7 @@ set (TESTER_NAME UnitTests)
 
 set (TEST_SRCS
 # ========================== ADD TEST SOURCES BELOW ========================== #
+  ft_str/ft_strncpy_test.cc
   ft_str/ft_strcat_test.cc
   ft_str/ft_strcpy_test.cc
   ft_str/ft_strncmp_test.cc
