--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,6 +6,7 @@ set (TESTER_NAME UnitTests)
 
 set (TEST_SRCS
 # ========================== ADD TEST SOURCES BELOW ========================== #
+  ft_str/ft_strdup_test.cc
   ft_mem/ft_memdel_test.cc
   ft_str/ft_strdel_test.cc
   ft_str/ft_strlcat_test.cc
